# u-schedule

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  validation.rs
src/cp/: mod.rs
src/dispatching/: context.rs  engine.rs  mod.rs
src/dispatching/rules/: mod.rs
src/ga/: chromosome.rs  mod.rs  operators.rs  problem.rs
src/models/: activity.rs  calendar.rs  constraint.rs  mod.rs  resource.rs  schedule.rs  task.rs  time_constraints.rs
src/scheduler/: kpi.rs  mod.rs  simple.rs
