[package]
name = "u-schedule"
version = "0.1.0"
edition = "2021"
authors = ["iyulab"]
license = "MIT"
repository = "https://github.com/iyulab/u-schedule"
description = "Scheduling framework for the U-Engine ecosystem"
keywords = ["scheduling", "job-shop", "optimization", "manufacturing"]
categories = ["algorithms"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
u-metaheur = { path = "../u-metaheur" }
u-optim = { path = "../u-optim" }
rand = "0.9"

[dev-dependencies]
serde_json = "1.0"
