[package]
name = "u-schedule"
version = "0.1.0"
edition = "2021"
authors = ["iyulab"]
license = "MIT"
repository = "https://github.com/iyulab/u-schedule"
description = "Domain-agnostic scheduling framework: job-shop models, dispatching rules, GA encoding, constraint programming."
readme = "README.md"
keywords = ["scheduling", "job-shop", "optimization", "manufacturing"]
categories = ["algorithms"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
u-metaheur = { version = "0.1", path = "../../algorithms/u-metaheur" }
u-numflow = { version = "0.1", path = "../../foundation/u-numflow" }
rand = "0.9"

[dev-dependencies]
serde_json = "1.0"
